# tiny-fn

./: Cargo.toml  README.md
.github/workflows/: badge.yml
license/: APACHE  MIT
src/: lib.rs
