[package]
name = "tiny-fn"
version = "0.1.8"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tiny-fn"
homepage = "https://github.com/zakarumych/tiny-fn"
repository = "https://github.com/zakarumych/tiny-fn"
readme = "README.md"
description = "Type erased closures on stack"
categories = ["rust-patterns", "memory-management", "no-std"]
keywords = ["no-std", "memory", "data-structures", "macro"]

[features]
example = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["example"]
